# omni_nmpc

./: CMakeLists.txt  package.xml
acado_code_generator/: CMakeLists.txt  simple_mpc.cpp
include/: acado.h
src/: acado.cpp  nmpc_node.cpp
